--- a/src/scss/variables/_badges.scss
+++ b/src/scss/variables/_badges.scss
@@ -3,8 +3,9 @@ $badge-border-style: solid !default;
 $badge-border-width: 1px !default;
 $badge-line-height: null !default;
 
-$badge-lexicon-icon-height: 0.76em !default;
-$badge-lexicon-icon-width: $badge-lexicon-icon-height !default;
+$badge-lexicon-icon-height: 0.7em !default;
+$badge-lexicon-icon-margin-top: -0.1em !default;
+$badge-lexicon-icon-width: auto !default;
 
 $badge-link-color: #FFF !default;
 $badge-link-hover-color: null !default;
